--- a/playbook/roles/app/templates/.env.j2
+++ b/playbook/roles/app/templates/.env.j2
@@ -1,15 +1,15 @@
-APP_SALT={{ APP_SALT }}
+APP_SALT="{{ APP_SALT }}"
 
-DB_HOST={{ DB_HOST }}
-DB_NAME={{ DB_NAME }}
-DB_USER={{ DB_USER }}
-DB_PASSWORD={{ DB_PASSWORD }}
+DB_HOST="{{ DB_HOST }}"
+DB_NAME="{{ DB_NAME }}"
+DB_USER="{{ DB_USER }}"
+DB_PASSWORD="{{ DB_PASSWORD }}"
 
-SMTP_HOST={{ SMTP_HOST }}
-SMTP_AUTH={{ SMTP_AUTH }}
-SMTP_USER={{ SMTP_USER }}
-SMTP_PASSWORD={{ SMTP_PASSWORD }}
-SMTP_SECURE={{ SMTP_SECURE }}
-SMTP_PORT={{ SMTP_PORT }}
+SMTP_HOST="{{ SMTP_HOST }}"
+SMTP_AUTH="{{ SMTP_AUTH }}"
+SMTP_USER="{{ SMTP_USER }}"
+SMTP_PASSWORD="{{ SMTP_PASSWORD }}"
+SMTP_SECURE="{{ SMTP_SECURE }}"
+SMTP_PORT="{{ SMTP_PORT }}"
 
-APP_IMAGE_TAG={{ APP_IMAGE_TAG }}
+APP_IMAGE_TAG="{{ APP_IMAGE_TAG }}"
